test/errhandling/psahabu/propagate.good
calling propError
propagate.chpl:9: error: uncaught error
